Fixed toolbar title when sidebar is expanded on mobile.

--- a/reactium_modules/@atomic-reactor/toolkit/Toolbar/_style.scss
+++ b/reactium_modules/@atomic-reactor/toolkit/Toolbar/_style.scss
@@ -1,3 +1,14 @@
+body[data-expand='true'],
+body[data-expanded='true'] {
+    .rtk-toolbar {
+        &-title {
+            @include rtk-breakpoint(xs-only) {
+                display: none;
+            }
+        }
+    }
+}
+
 .rtk-toolbar {
     display: flex;
     align-items: center;
